server.js : 삭제시 count 컬렉션에서 -1, App.js : Index Props 이동, Detail.js : 로딩, 북마크목록, ManagerModal.js : 문제 삭제시 로컬스토리지에서도 삭제 searchModal.js : 리스트 불러오기

--- a/client/src/components/detail/Detail.module.css
+++ b/client/src/components/detail/Detail.module.css
@@ -2,20 +2,19 @@
     border: 1px solid black;
     width: 70%;
     margin: auto;
+    margin-left: 7%;
     padding: 20px;
     text-align:left;
+    float:left;
 }
 
-.left {
+.side {
     width:25%;
 }
 
 .center {
     width:50%;
-}
-
-.right {
-    width:25%;
+    float: center;
 }
 
 .detail .title {
@@ -27,5 +26,12 @@
 }
 
 .hidden {
-    visibility  : hidden;
+    visibility: hidden;
+}
+
+.bookMark {
+    text-overflow: ellipsis;
+    overflow: hidden;
+    white-space:nowrap;
+    height : 20px;
 }
