--- a/client/src/App.css
+++ b/client/src/App.css
@@ -23,7 +23,7 @@
   top: 50%;
   left: 50%;
   transform: translate(-50%, -50%);
-  width: 400px;
+  width: 90%;
   background-color: white;
   border: 1px solid #000;
   box-shadow: 24;
@@ -44,6 +44,9 @@
   text-align: left;
   padding: 10px;
   cursor: pointer;
+  text-overflow: ellipsis;
+  overflow: hidden;
+  white-space:nowrap;
 }
 
 .box:hover {
