--- a/client/src/index.css
+++ b/client/src/index.css
@@ -4,9 +4,12 @@
 body {
   margin: 0;
   font-family: 'Nanum Gothic', sans-serif;
+  background-color: #f1f3f9;
 }
 
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
 }
+
+
